--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ desktop.ini
 
 # Logs
 *.log
-acceltrack_*.log
+frankentrack_*.log
 
 # Configuration (keep template, ignore user config)
 config/config.cfg
