--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-numpy>=1.20.0
-opencv-python>=4.5.0
+# Python 3.8-3.13 supported with binary wheels
+# Python 3.14+ may require building from source (experimental)
+numpy>=1.26.0
+opencv-python>=4.8.0
 pyserial>=3.5
-Pillow>=8.0.0
+Pillow>=10.0.0
